# ExtreamCodeOS

./: CMakeLists.txt  README.md
docs/: ProjectStructure.md
src/Builder/: CompilerPoint.h  CompilerType.h  Load.h  Log.h  json.hpp  main.cpp  workspace.code-workspace
src/Extreme Soft/: README.md
src/Extreme Soft/Biboran/: biboran.c
src/Extreme Soft/ExNotepad/: ExNotepad.Designer.cs  ExNotepad.cs  ExNotepad.resx  Program.cs
src/Flight/: flight.ino
src/Games/ExtremeCodeOS runner/: runner.c
src/Games/GuessTheNumber/: guessTheNumber.c
src/Games/Limpopo/: limpopo.c
src/Games/TicTacToe/: TicTacToe.c
src/lib/XOR_crypto/: XOR.h  test.cpp
